# forex-back

./: .gitignore  01_create_embedings.py  02_poc_assistant.py  README.md  manage.py  pyproject.toml
api/: settings.py  urls.py
core/: embeddings.py  retriever.py
questions/: serializers.py  urls.py  views.py
scripts/: 01_create_embedings.py  02_poc_assistant.py
